feat: update product routes to support multiple image uploads and add service routes
- Changed product route to allow uploading of multiple images (up to 10).
- Added new service routes for CRUD operations and image uploads.
- Removed seed script as it is no longer needed.
- Updated package.json to replace 'resend' with 'nodemailer' for email handling.

--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
-MONGO_URI=mongodb://localhost:27017/sabaysis
-RESEND_API_KEY=re_123456789
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=your_api_key
-CLOUDINARY_API_SECRET=your_api_secret
+MONGO_URI=mongodb+srv://sabaysissports_db_user:APC4ybPE83Nz49mJ@sabaysis.m0fkuc3.mongodb.net/sabaysis_db?retryWrites=true&w=majority
+PORT=5000
+CLOUDINARY_CLOUD_NAME=dprtzxadd
+CLOUDINARY_API_KEY=238168899345189
+CLOUDINARY_API_SECRET=xWdS6_QI-YjiwXI-6MTODR016Gc
 ADMIN_EMAIL=admin@sabaysis.com
 ADMIN_PASSWORD=admin123
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+EMAIL_FROM_NAME=Sabaysis Contact
+EMAIL_TO=ajarenterprisesmeerut@gmail.com
