--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.18.2",
     "mongoose": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "resend": "^2.0.0"
+    "nodemailer": "^7.0.12"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
