fix: update SMTP user and password, and change email recipient in environment configuration

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ ADMIN_EMAIL=admin@sabaysis.com
 ADMIN_PASSWORD=admin123
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
+SMTP_USER=sabaysissports@gmail.com
+SMTP_PASS=oary hprt csnb vsqu
 EMAIL_FROM_NAME=Sabaysis Contact
-EMAIL_TO=ajarenterprisesmeerut@gmail.com
+EMAIL_TO=sabaysissports@gmail.com
